--- a/index.html
+++ b/index.html
@@ -1,90 +1,9 @@
 <!DOCTYPE html>
 <html>
-<!-- Powered by Robin Zhu, 2023/10 -->
-
 <head>
-    <meta http-equiv="Content-Type" content="text/html;charset=utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0">
-    <title>识方子</title>
-    <link rel="icon" type="image/jpg" href="image/fang.ico" />
-    <link rel="stylesheet" href="css/style.css">
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.slim.min.js"
-        crossorigin="anonymous"></script>
-    <script src="js/const.js?47"></script>
-    <script src="js/main.min.js?29"></script>
 </head>
-
 <body>
-    <div class="header-wrapper">
-        <input type="text" class="wd" id="search_input" maxlength="100" placeholder="输入药名（任意分割符隔开）或方名，回车确认">
-    </div>
-
-    <div class="message-wrapper">
-        <div id="warning_message"></div>
-        <div id="info_message"></div>
-    </div>
-
-    <hr>
-
-    <div>
-        快捷操作
-        <div class="content-wrapper">
-            <span id="shortcut_clear" class="shortcut">清空</span>
-            <span id="shortcut_select_all" class="shortcut">全选</span>
-            <span id="shortcut_random_yao" class="shortcut">随机药</span>
-            <span id="shortcut_random_yaodui" class="shortcut">随机药对</span>
-            <span id="shortcut_random_fang" class="shortcut">随机方</span>
-        </div>
-    </div>
-
-    <hr>
-
-    <div>
-        近似方
-        <div id="usage_wrapper"></div>
-        <div id="jinsifang_wrapper" class="content-wrapper"></div>
-    </div>
-
-    <hr>
-
-    <div>
-        药对
-        <div id="yaodui_wrapper" class="content-wrapper"></div>
-    </div>
-
-    <hr>
-
-    <div id="yao_details">
-        <div>
-            <div>五味</div>
-            <div id="wuwei_wrapper" class="content-wrapper"></div>
-        </div>
-
-        <hr>
-
-        <div>
-            <div>四气</div>
-            <div id="siqi_wrapper" class="content-wrapper"></div>
-        </div>
-
-        <hr>
-
-        <div>
-            <div>升降沉浮</div>
-            <div id="shengjiang_wrapper" class="content-wrapper"></div>
-        </div>
-
-        <hr>
-
-        <div>
-            <div>归经</div>
-            <div id="guijing_wrapper" class="content-wrapper"></div>
-        </div>
-    </div>
-
-    <div>
-        <img class="hidden" src="image/loadmore.svg">
-    </div>
+    因技术原因，网站已升级迁移至gitlab，同时新增了更多功能！<br/>
+    <a href="https://shifangzi.gitlab.io/sfz/">https://shifangzi.gitlab.io/sfz/</a>
 </body>
-
 </html>
